--- a/app/globals.css
+++ b/app/globals.css
@@ -14,8 +14,14 @@ body {
 }
 
 @layer utilities {
+  .flexBetween {
+    @apply flex items-center justify-between;
+  }
   .max-container {
     @apply mx-auto max-w-[1440px];
+  }
+  .padding-container {
+    @apply px-6 lg:px-20 3xl:px-0;
   }
 }
 
