--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,9 @@ body {
   .padding-container {
     @apply px-6 lg:px-20 3xl:px-0;
   }
+  .flexCenter {
+    @apply flex items-center justify-center;
+  }
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
