--- a/components/mobilebody.module.css
+++ b/components/mobilebody.module.css
@@ -17,3 +17,16 @@
     right: 25px;
     font-size: 30px;
 }
+
+
+.wrapper{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 150px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 150px;
+    padding-bottom: 20px;
+}
