--- a/components/Button/button.module.css
+++ b/components/Button/button.module.css
@@ -1,7 +1,7 @@
 .container {
     padding: 20px;
     cursor: pointer;
-    background-color: #53c28b;
+    background-color: #4BD1B9;
     border: none;
     border-radius: 5px;
     width: max-content;
